base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
  labels:
    app: app-name
spec:
  selector:
    app: app-name
  ports:
  type: ClusterIP  # Default to internal service, can be changed in overlays
